tests/baselines/reference/reExportUndefined1.errors.txt
a.ts(1,10): error TS2661: Cannot export 'undefined'. Only local declarations can be exported from a module.


==== a.ts (1 errors) ====
    export { undefined };
             ~~~~~~~~~
!!! error TS2661: Cannot export 'undefined'. Only local declarations can be exported from a module.